--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -480,7 +480,25 @@
         <br><br>
         <h3>Day 41: Nov 18 2021</h3><br>
         <p>
-
+          <a href="https://tridevreddy333.medium.com/my-first-valid-bug-in-hackerone-a60d9ed445b4" target="_blank">My First Valid Bug In Hackerone</a> : Tridev Reddy <br><br>
+          <a href="https://sn0xsharma.medium.com/automation-using-python-in-bug-bountys-full-practical-explanation-e1e694c43f78" target="_blank">Automation using python in bug bounty’s (full practical explanation)</a> : sn0xsharma <br><br>
+          <a href="https://alimanshester.medium.com/how-i-found-7-xss-vulnerabilities-in-filename-reflecting-6347279ee82a" target="_blank">How I Found 7 XSS Vulnerabilities in Filename Reflecting</a> : Ali Manshester <br><br>
+          <a href="https://medium.com/@hazeemyasseer/idor-the-hard-way-idor-to-account-takeover-3f0176bd7d8a" target="_blank">IDOR THE HARD WAY (ACCOUNT TAKEOVER IMPACT)</a> : Hazeem' Yasseer <br><br>
+          <a href="https://medium.com/@shakti.gtp/a-fever-worth-750-accessing-private-projects-d113c561311f" target="_blank">A fever Worth 750$- [Accessing Private Projects ]</a> : Shakti Mohanty <br><br>
+          University Cyber Security Meeting <br><br>
+          <a href="https://tryhackme.com/room/sqlinjectionlm" target="_blank">SQL Injection </a> : TryHackMe <br><br>
+          <a href="https://cyberskyline.com/events/crowdstrike-cyber-challenge" target="_blank">CrowdStrike Cyber Challenge </a> <br><br>
+          <a href="https://medium.com/cyber-dacians/binary-exploitation-01-introduction-9fcd2cdce9c6" target="_blank">Binary Exploitation 01 — Introduction</a> : Silaghi Fineas <br><br>
+        </p>
+        <br><br>
+        <h3>Day 42: Nov 19 2021</h3><br>
+        <p>
+          <a href="https://melotover.medium.com/how-i-bypassed-a-tough-waf-to-steal-user-cookies-using-xss-da75f28108e4" target="_blank">How I Bypassed a tough WAF to steal user cookies using XSS!</a> : Asem Eleraky <br><br>
+          <a href="https://medium.com/@gaurav3112verma/account-takeover-vulnerability-admin-any-user-via-password-reset-1cb4d5057e35" target="_blank">Account Takeover Vulnerability(admin + any user) via Password Reset</a> : Gaurav Verma <br><br>
+          <a href="https://mrpentestguy.medium.com/how-i-was-able-to-find-100-xss-in-united-nations-bug-bounty-program-a675573c006d" target="_blank">How I was able to find 100+ XSS in the United nations Bug Bounty Program</a> : mrpentestguy <br><br>
+          <a href="https://sherlocksecure.medium.com/booking-tickets-for-1rupee-in-irctc-bus-booking-app-168558ac24c8" target="_blank">Booking Tickets for 1Rupee in IRCTC Bus Booking App</a> : Udhaya Prakash <br><br>
+          <a href="https://medium.com/@Bishoo97x/bug-bounty-writeups-exploiting-cross-site-scripting-xss-5dde1473af3f" target="_blank">[Bug Bounty Writeups] Exploiting Cross Site Scripting XSS</a> : Ahmed Hassan (Bishoo97x) <br><br>
+          <a href="https://balsnctf.com/" target="_blank">Balsn CTF</a> <br><br>
         </p>
         <p>Copyright © 2021 Aditya Dindi</p>
       </div> 
