--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -498,7 +498,20 @@
           <a href="https://mrpentestguy.medium.com/how-i-was-able-to-find-100-xss-in-united-nations-bug-bounty-program-a675573c006d" target="_blank">How I was able to find 100+ XSS in the United nations Bug Bounty Program</a> : mrpentestguy <br><br>
           <a href="https://sherlocksecure.medium.com/booking-tickets-for-1rupee-in-irctc-bus-booking-app-168558ac24c8" target="_blank">Booking Tickets for 1Rupee in IRCTC Bus Booking App</a> : Udhaya Prakash <br><br>
           <a href="https://medium.com/@Bishoo97x/bug-bounty-writeups-exploiting-cross-site-scripting-xss-5dde1473af3f" target="_blank">[Bug Bounty Writeups] Exploiting Cross Site Scripting XSS</a> : Ahmed Hassan (Bishoo97x) <br><br>
+          <a href="https://cyberskyline.com/events/crowdstrike-cyber-challenge" target="_blank">CrowdStrike Cyber Challenge </a> <br><br>
           <a href="https://balsnctf.com/" target="_blank">Balsn CTF</a> <br><br>
+        </p>
+        <br><br>
+        <h3>Day 43: Nov 20 2021</h3><br>
+        <p>
+          <a href="https://medium.com/@_tas/2-months-into-my-bug-bounty-learning-journey-cd45f7fc425a" target="_blank">2 months into my Bug Bounty learning journey..</a> : Tasi Sua <br><br>
+          <a href="https://u-itachi.medium.com/from-phpinfo-page-to-many-p1-bugs-and-rce-symfony-bce432605662" target="_blank">From phpinfo page to many P1 bugs and RCE. [Symfony]</a> : Abdelrahman Khaled <br><br>
+          <a href="https://medium.com/@spanikan/open-redirect-everywhere-c3575ad41f69" target="_blank">OPEN REDIRECT EVERYWHERE</a> : Sabarinath Panikken <br><br>
+          <a href="https://medium.com/@pauraspatil17/my-ejpt-experience-afd22719c80a" target="_blank">My eJPT Experience</a> : Pauras Patil <br><br>
+          <a href="https://aidilarf.medium.com/how-do-i-earn-1300-00-from-bug-hunting-51f7897a512f" target="_blank">How Do I Earn $1300.00 From Bug Hunting?</a> : Aidil Arief <br><br>
+          <a href="https://y0sum3x.medium.com/how-i-earned-400-in-8min-on-private-h1-program-47766af4f2f2" target="_blank">HOW I EARNED $400 IN 8min ON PRIVATE H1 PROGRAM</a> : Calogero Joseph <br><br>
+          <a href="https://7h3h4ckv157.medium.com/how-i-compromised-multiple-ubuntu-systems-at-root-level-f7841d280f2e" target="_blank">How I compromised multiple Ubuntu systems at ~#Root level !!</a> : 7h3h4ckv157 ™ <br><br>
+
         </p>
         <p>Copyright © 2021 Aditya Dindi</p>
       </div> 
