--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -511,7 +511,22 @@
           <a href="https://aidilarf.medium.com/how-do-i-earn-1300-00-from-bug-hunting-51f7897a512f" target="_blank">How Do I Earn $1300.00 From Bug Hunting?</a> : Aidil Arief <br><br>
           <a href="https://y0sum3x.medium.com/how-i-earned-400-in-8min-on-private-h1-program-47766af4f2f2" target="_blank">HOW I EARNED $400 IN 8min ON PRIVATE H1 PROGRAM</a> : Calogero Joseph <br><br>
           <a href="https://7h3h4ckv157.medium.com/how-i-compromised-multiple-ubuntu-systems-at-root-level-f7841d280f2e" target="_blank">How I compromised multiple Ubuntu systems at ~#Root level !!</a> : 7h3h4ckv157 ™ <br><br>
-
+          <a href="https://tryhackme.com/room/wekorra" target="_blank">Wekor</a> : TryHackMe <br><br>
+          Hacking Book: Real-World Bug Hunting - A Field Guide to Web Hacking <br><br>
+          <a href="https://balsnctf.com/" target="_blank">Balsn CTF</a> <br><br>
+        </p>
+        <br><br>
+        <h3>Day 44: Nov 21 2021</h3><br>
+        <p>
+          <a href="https://medium.com/@Legacy_Defender/1-my-first-resolve-vulnerability-a0ccfd1f062f" target="_blank">1: My First Resolve Vulnerability</a> : Legacy_Defender <br><br>
+          <a href="https://medium.com/@sarafsaransh321/how-a-bit-of-observation-gave-me-my-second-account-takeover-707e76b9c9f2" target="_blank">How A bit of observation gave me my Second Account Takeover</a> : Saransh Saraf <br><br>
+          <a href="https://medium.com/@Bishoo97x/exploiting-critical-sql-injection-vulnerability-286409dc81cb" target="_blank">Exploiting Critical SQL Injection Vulnerability</a> : Ahmed Hassan (Bishoo97x) <br><br>
+          <a href="https://rammk01.medium.com/how-can-i-takeover-any-account-using-only-their-email-or-mobile-number-deca71a05a4b" target="_blank">How can I takeover any account using only their email or mobile number.</a> : Ramalingasamy <br><br>
+          <a href="https://sm4rty.medium.com/hunting-for-bugs-in-password-reset-feature-2021-3def1b391bef" target="_blank">Hunting for Bugs in Password Reset Feature -2021</a> : Sm4rty <br><br>
+          <a href="https://aidilarf.medium.com/380-xss-stored-in-bigo-bug-bounty-program-a8b9529adcc4" target="_blank">($380) XSS STORED in Bigo Bug Bounty Program</a> : Aidil Arief <br><br>
+          <a href="https://tryhackme.com/room/wekorra" target="_blank">Wekor</a> : TryHackMe <br><br>
+          Hacking Book: Real-World Bug Hunting - A Field Guide to Web Hacking <br><br>
+          <a href="https://play.picoctf.org/login?redirect=/practice" target="_blank"> PicoCTF </a>: Carnegie Mellon University <br><br>
         </p>
         <p>Copyright © 2021 Aditya Dindi</p>
       </div> 
