--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -39,6 +39,12 @@
           <li class="nav-item">
             <a class="nav-link" href="#week6">Week 6</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#week7">Week 7</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#week8">Week 8</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -528,6 +534,43 @@
           Hacking Book: Real-World Bug Hunting - A Field Guide to Web Hacking <br><br>
           <a href="https://play.picoctf.org/login?redirect=/practice" target="_blank"> PicoCTF </a>: Carnegie Mellon University <br><br>
         </p>
+        <br><br>
+        <h3>Day 45: Nov 22 2021</h3><br>
+        <p>
+          <a href="https://sapt.medium.com/networking-with-sapt-0x01-introduction-to-computer-network-419573602264" target="_blank">Networking With SAPT-0x01: Introduction to Computer Network </a> : Prajit Sindhkar <br><br>
+          <a href="https://sapt.medium.com/networking-with-sapt-0x02-basic-networking-terms-e50c06f7e7f6" target="_blank">Networking With SAPT-0x02: Basic Networking Terms </a> : Prajit Sindhkar <br><br>
+          <a href="https://infosecwriteups.com/authentication-bypass-easy-p1-in-10-minutes-54d5a2093e54" target="_blank">Authentication Bypass | Easy P1 in 10 minutes</a> : Anirudh Makkar <br><br>
+          <a href="https://rammk01.medium.com/out-of-scope-idor-allow-access-to-billing-data-and-address-of-any-user-8596eaea82eb" target="_blank">(Out of Scope)-IDOR allows access to billing data and address of any user.</a> : Ramalingasamy <br><br>
+          <a href="https://medium.com/@katikitala.sushmitha078/how-i-can-take-over-any-users-account-with-their-mobile-number-6d820a364cad" target="_blank">How I can take over any user’s account with their mobile number</a> : Sushmitha Katikitala <br><br>
+          <a href="https://medium.com/@p3g4sus/realizations-of-a-beginner-bug-bounty-hunter-49d95d07d387" target="_blank">Realizations of a Beginner Bug Bounty Hunter</a> : Abhishek Praceen <br><br>
+          <a href="https://www.youtube.com/playlist?list=PLhixgUqwRTjxglIswKp9mpkfPNfHkzyeN" target="_blank">Binary Exploitation / Memory Corruption </a> : LiveOverflow <br><br>
+          Hacking Book: Real-World Bug Hunting - A Field Guide to Web Hacking 
+          <a href="https://tryhackme.com/room/vulnnet1" target="_blank">VulnNet</a> : TryHackMe <br><br>
+        </p>
+        <br><br>
+        <h2 id="week7">Week 7</h2><br>
+        <h3>Day 46: Nov 23 2021 - Day 52: Nov 29 2021</h3><br>
+        <p>
+          <a href="https://pawanchhabria.medium.com/my-first-pre-auth-account-takeover-in-20-secs-7c90fd273ffa" target="_blank">My First Pre-Auth Account Takeover in 20 secs</a> : Pawan Chhabria <br><br>
+          <a href="https://itsdeepceh.medium.com/a-business-logic-error-bug-worth-600-a0050720bfee" target="_blank"></a>: Deep Patidar <br><br>
+          <a href="https://itsdeepceh.medium.com/account-takeover-due-to-weak-token-policy-e395d50672fe" target="_blank"></a> : Deep Patidar <br><br>
+          <a href="https://medium.com/hackernoon/a-hacker-intercepted-your-wifi-traffic-stole-your-contacts-passwords-financial-data-heres-how-4fc0df9ff152" target="_blank">A hacker intercepted your Wi-Fi traffic and stole your contacts, passwords, and financial data. Here’s how.</a> : Patrick F.Wilbur <br><br>
+          <a href="https://seek-er.medium.com/capture-the-flag-ctf-2571182f3713" target="_blank">Capture The Flag (CTF) 🚩</a> : Viky <br><br>
+          <a href="https://thehackersmeetup.medium.com/beginners-guide-to-capture-the-flag-ctf-71a1cbd9d27c" target="_blank">Beginner’s Guide to Capture the Flag (CTF)</a> : The Hackers Meetup <br><br>
+          <a href="https://sankalpa02.medium.com/testing-cookies-worth-500-8fc2310e6d7e" target="_blank">Testing Cookies worth $500</a> : Sankalpa Acharya <br><br>
+          <a href="https://infosecwriteups.com/how-i-was-able-to-send-sms-from-target-and-get-their-otp-6252bcc2ac9d" target>How I was able to send SMS from target and get their OTP.</a> : Ramalingasamy <br><br>
+          <a href="https://riteshgohil-25.medium.com/ato-of-wordpress-website-4-digits-bounty-in-5-minute-cc888c4054c9" target="_blank">ATO of WordPress Website “4 digits €€€€ Bounty in 5 Minute!”</a> : Ritesh Gohil <br><br>
+          <a href="https://infosecwriteups.com/how-i-hacked-nepals-ecommerce-site-and-bought-huge-packs-of-kitkats-for-free-lol-by-shubham-9e7a3179ad91" target>How I hacked Nepal’s ecommerce site and bought huge packs of kitkats for free lol :) | By Shubham Dhungana</a> : Subh Dhungana <br><br>
+        </p>
+        <br><br>
+        <h2 id="week8">Week 8</h2><br>
+        <h3>Day 45: Nov 22 2021</h3><br>
+        <p>
+
+        </p>
+        <br><br>
+        
+        <br><br>
         <p>Copyright © 2021 Aditya Dindi</p>
       </div> 
     </div>
