--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -561,16 +561,80 @@
           <a href="https://infosecwriteups.com/how-i-was-able-to-send-sms-from-target-and-get-their-otp-6252bcc2ac9d" target>How I was able to send SMS from target and get their OTP.</a> : Ramalingasamy <br><br>
           <a href="https://riteshgohil-25.medium.com/ato-of-wordpress-website-4-digits-bounty-in-5-minute-cc888c4054c9" target="_blank">ATO of WordPress Website “4 digits €€€€ Bounty in 5 Minute!”</a> : Ritesh Gohil <br><br>
           <a href="https://infosecwriteups.com/how-i-hacked-nepals-ecommerce-site-and-bought-huge-packs-of-kitkats-for-free-lol-by-shubham-9e7a3179ad91" target>How I hacked Nepal’s ecommerce site and bought huge packs of kitkats for free lol :) | By Shubham Dhungana</a> : Subh Dhungana <br><br>
+          <a href="https://4bdoz.medium.com/rce-by-code-injection-perl-reverse-shell-a2e90181b10" target="_blank">RCE By Code Injection | Perl Reverse Shell</a> : Abdulrahman-Kamel <br><br>
+          <a href="https://rohit443.medium.com/privilege-escalation-to-stored-xss-dff01314bc7e" target="_blank">Privilege Escalation to stored XSS</a> : Rohit_443 <br><br>
+          <a href="https://anishkashukla.medium.com/an-easy-html-injection-c1c6ab6ff05" target="_blank">An easy HTML Injection</a> : Anishka Shukla <br><br>
+          <a href="https://medium.com/@irshamohd.017/my-first-valid-bug-6f5eb401f002" target="_blank">My first valid Bug !</a> : irshad mohammed <br><br>
+          <a href="https://anonymousyogi.medium.com/how-i-found-bug-at-swiggy-55bc2015407f" target="_blank">How I Found bug at Swiggy</a> : Anon_Y0gi <br><br>
         </p>
         <br><br>
         <h2 id="week8">Week 8</h2><br>
-        <h3>Day 45: Nov 22 2021</h3><br>
+        <h3>Day 53: Nov 30 2021</h3><br>
         <p>
-
+          University Cyber Security Meeting
         </p>
         <br><br>
-        
+        <h3>Day 54: Dec 1 2021</h3><br>
+        <p>
+          <a href="https://www.youtube.com/watch?v=858rVeWB8Pw&ab_channel=JohnHammond" target="_blank">TryHackMe! Advent of Cyber - 2021 KICKOFF: 25 Days of Learning CYBERSECURITY</a>  : John Hammond <br><br>
+          <a href="https://faiyazhacks.medium.com/story-of-an-encoded-xss-e83c7ea9e02" target="_blank">STORY OF AN ENCODED XSS</a> : Faiyaz Ahmad <br><br> 
+          <a href="https://faiyazhacks.medium.com/bugbounty-c-s-r-f-at-password-reset-page-93bd440cee61" target="_blank">BugBounty: C S R F at Password Reset Page</a> : Faiyaz Ahmad <br><br> 
+          <a href="https://encodedguy.medium.com/duplicate-on-csrf-account-takeover-9784af23ec13" target="_blank">Duplicate on CSRF → Account Takeover</a> : Inderjeet Singh - encodedguy <br><br>
+          <a href="https://encodedguy.medium.com/600-for-idor-file-or-folder-download-243166452dad" target="_blank">$600 for IDOR (File or Folder Download)</a> : Inderjeet Singh - encodedguy <br><br>
+          <a href="https://rootissh.in/gau-get-all-urls-tool-tool-for-url-discovery-129e077ab17" target="_blank">gau (Get All URLs) tool — Tool for URL Discovery</a> : Prateek Kuber <br><br>
+          <a href="https://infosec-helper.medium.com/how-i-hacked-database-of-moga-police-services-punjab-web-applicaton-bc47a978120c" target="_blank">How I Hacked Database of MOGA Police Services Punjab Web-Applicaton !!</a> : Info Sec Helper <br><br>
+          <a href="https://medium.com/@kalvik/account-takeover-a-bonus-vulnerability-3c2dc4e607ea" target="_blank">Account Takeover + A Bonus Vulnerability</a> : Vikash Maurya <br><br>
+          <a href="https://medium.com/@nithissh/a-tale-of-weird-xss-into-100-4cd451fe79d4" target="_blank">A Tale of Weird XSS into $100</a> : Nithissh <br><br>
+          <a href="https://mazoka777.medium.com/bypass-open-redirection-protection-via-google-sites-bugbounty-writeup-7e9b6dbe0403" target="_blank">Bypass Open Redirection Protection Via Google Sites [BugBounty writeup]</a> : Ahmed Salah Abdalhfaz (Elsfa7-110) <br><br>
+          <a href="https://medium.com/@0xPrototype/so-you-want-to-start-doing-bug-bounties-8aa85b47dea3" target="_blank">So you want to start doing bug bounties?</a> : Lucas Noki <br><br>
+        </p>
         <br><br>
+        <h3>Day 55: Dec 2 2021</h3><br>
+        <p>
+          <a href="https://infosecwriteups.com/how-i-bypassed-current-password-verification-bfa9d8c3f471" target="_blank">How I bypassed current password Verification</a> : Sufiyan Gouri <br><br>
+          <a href="https://technicalsurendra.medium.com/otp-bypass-step-to-step-c81f1a6a40f5" target="_blank">OTP Bypass {step to step}</a> : Surendra Choudhury <br><br>
+          <a href="https://naveenroy008.medium.com/xss-attacks-via-svg-images-a2835c0cb7c9" target="_blank">XSS Attacks via SVG images</a> : Naveenroy <br><br>
+          <a href="https://venkat599.medium.com/cross-site-request-forgery-csrf-leads-to-account-takeover-97580d76c1f" target="_blank">Cross site request forgery (CSRF) leads to Account Takeover.</a> : Venkatkiran <br><br>
+          <a href="https://vengeance.medium.com/recon-step-methodology-c9664f5ce312" target="_blank">Recon Step/ Methodology</a> : Vengeance <br><br>
+          <a href="https://medium.com/@sarveshblogs/a-small-tale-of-account-takeover-2eba07a6ef5f" target="_blank">A Small Tale of Account Takeover …</a> : Sarvesh Salgaonkar <br><br>
+          <a href="https://ictf.gg/" target="_blank">iCTF</a> <br><br>
+        </p>
+        <p>Break Day</p>
+        <br><br>
+        <h3>Day 55: Dec 2 2021 - Day 58: Dec 6 2021</h3><br>
+        <p>Break Days</p>
+        <br><br>
+        <h3>Day 59: Dec 7 2021</h3><br>
+        <p>
+          <a href="https://54m4ri74n.medium.com/otp-vulnerabilities-604d139c1f61" target="_blank">OTP Vulnerabilities</a> : Kapil Verma <br><br>
+          <a href="https://narsinghy.medium.com/github-recon-to-p2-b3e4eced76fd" target=_blank>Github recon to P2</a> : Narsingh Yadav <br><br>
+          <a href="https://medium.com/techiepedia/how-i-found-the-security-issue-on-govt-of-indian-website-e4b750a86b7e" target="_blank">How I found the security issue in Govt of Indian website</a> : C M UPPIN <br><br>
+          <a href="https://0awawa0.medium.com/h-cktivitycon-2021-ctf-writeups-b93bc122fecd" target="_blank">H@cktivityCon 2021 CTF Writeups</a> : 0awawa0 <br><br>
+          <a href="https://medium.com/@manishadhikari096/story-of-otp-bypass-252b92d0710d" target="_blank">Story Of OTP Bypass</a> : Mundre😎😎😎 <br><br>
+          <a href="https://shriyanssudhi.medium.com/finding-bugs-that-doesnt-exists-a9993aea16ba" target="_blank">Finding bugs that doesn’t exists</a> : Shriyans Sudhi <br><br>
+          <a href="https://medium.com/@Bishoo97x/stored-and-reflected-xss-and-reported-e69ac5750fb1" target="_blank">Stored and Reflected XSS and reported</a> : Ahmed Hassan (Bishoo97x) <br><br>
+          <a href="https://n1ghtmar3.medium.com/how-i-found-my-first-idor-in-hackerone-5d5f17bb431" target="_blank">How I found my first IDOR in HackerOne</a> : N1GHTMAR3 <br><br>
+          <a href="https://haox-hapot.medium.com/5-mistakes-a-newbie-hacker-makes-383c227d31b4" target="_blank">5 mistakes a newbie hacker makes</a> : Haox <br><br>
+          <a href="https://tryhackme.com/room/adventofcyber3" target="_blank">Advent of Cyber 3</a> : TryHackMe <br><br>
+        </p>
+        <br><br>
+        <h3>Day 59: Dec 7 2021</h3><br>
+        <p>
+          <a href="https://www.youtube.com/watch?v=bovOGgp_TbE&ab_channel=TryHackMe" target="_blank">Advent of Cyber 3, Day 2 - Cookies and Authentication</a> : Try Hack Me <br><br>
+          <a href="https://www.youtube.com/watch?v=_KwuuKsmAh0&ab_channel=RahulSingh" target="_blank">Bug Bounty Series | Chapter IV</a> : Rahul Singh <br><br>
+          <a href="https://www.youtube.com/watch?v=swNsAwfB6Ds&ab_channel=RahulSingh" target="_blank">Bug Bounty Series | Chapter 5 | Bounty Bounty for beginners</a> : Rahul Singh <br><br>
+          <a href="https://anonymousyogi.medium.com/response-manipulation-to-account-takeover-7a3efce36fad" target="_blank">Response manipulation to Account takeover</a> : Anon_Y0gi <br><br>
+          <a href="https://medium.com/@_tas/subdomain-enumeration-try-hack-me-learnings-d9def486e5b" target="_blank">Subdomain Enumeration: Try Hack Me Learnings</a> : Tasi Sua <br><br>
+          <a href="https://medium.com/@_tas/bug-bounty-hunting-a-beginners-perspective-4a113a5aab2f" target="_blank">Bug Bounty Hunting — A Beginners Perspective</a> : Tasi Sua <br><br>
+          <a href="https://amit-lt.medium.com/a-story-of-open-redirection-through-referer-header-f92a6513605a" target="_blank">A STORY OF OPEN REDIRECTION THROUGH REFERER HEADER.</a> : Amit Kumar <br><br>
+          <a href="https://amit-lt.medium.com/how-i-discovered-a-p1-vulnerability-in-accenture-just-a-simple-recon-your-dreams-come-true-1747accb5b67" target="_blank">HOW I DISCOVERED A P1 VULNERABILITY IN ACCENTURE</a> : Amit Kumar <br><br>
+          <a href="https://pawanchhabria.medium.com/how-i-accessed-the-sensitive-document-which-i-had-already-deleted-adbc1e6fbb25" target="_blank">How I accessed the Sensitive document which I had already deleted</a> : Pawan Chhabria <br><br>
+          <a href="https://medium.com/@zahirtariq/zero-click-account-takeover-32e888d13e73" target="_blank">Zero Click account Takeover</a> : Zahir Tariq <br><br>
+          <a href="https://tryhackme.com/room/adventofcyber3" target="_blank">Advent of Cyber 3</a> : TryHackMe <br><br>
+          <a href="https://medium.com/@jawadmahdi/how-i-found-blind-sql-injection-just-by-browsing-and-getting-a-unique-url-ed87fa1f35ed" target="_blank">How I found Blind SQL Injection just by browsing and getting a unique URL</a> : Jawad Mahdi <br><br>
+          <a href="https://medium.com/@yoshimlutfi/account-take-over-with-http-pollution-attack-at-reset-password-functionality-9f683bc0bdd" target="_blank">Account Take Over with HTTP Pollution Attack at Reset Password Functionality</a> : yoshi m lutfi <br><br>
+          
+        </p>
         <p>Copyright © 2021 Aditya Dindi</p>
       </div> 
     </div>
