--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -599,12 +599,11 @@
           <a href="https://medium.com/@sarveshblogs/a-small-tale-of-account-takeover-2eba07a6ef5f" target="_blank">A Small Tale of Account Takeover …</a> : Sarvesh Salgaonkar <br><br>
           <a href="https://ictf.gg/" target="_blank">iCTF</a> <br><br>
         </p>
-        <p>Break Day</p>
         <br><br>
-        <h3>Day 55: Dec 2 2021 - Day 58: Dec 6 2021</h3><br>
+        <h3>Day 55: Dec 2 2021 - Day 58: Dec 5 2021</h3><br>
         <p>Break Days</p>
         <br><br>
-        <h3>Day 59: Dec 7 2021</h3><br>
+        <h3>Day 59: Dec 6 2021</h3><br>
         <p>
           <a href="https://54m4ri74n.medium.com/otp-vulnerabilities-604d139c1f61" target="_blank">OTP Vulnerabilities</a> : Kapil Verma <br><br>
           <a href="https://narsinghy.medium.com/github-recon-to-p2-b3e4eced76fd" target=_blank>Github recon to P2</a> : Narsingh Yadav <br><br>
@@ -618,7 +617,7 @@
           <a href="https://tryhackme.com/room/adventofcyber3" target="_blank">Advent of Cyber 3</a> : TryHackMe <br><br>
         </p>
         <br><br>
-        <h3>Day 59: Dec 7 2021</h3><br>
+        <h3>Day 60: Dec 7 2021</h3><br>
         <p>
           <a href="https://www.youtube.com/watch?v=bovOGgp_TbE&ab_channel=TryHackMe" target="_blank">Advent of Cyber 3, Day 2 - Cookies and Authentication</a> : Try Hack Me <br><br>
           <a href="https://www.youtube.com/watch?v=_KwuuKsmAh0&ab_channel=RahulSingh" target="_blank">Bug Bounty Series | Chapter IV</a> : Rahul Singh <br><br>
@@ -633,8 +632,37 @@
           <a href="https://tryhackme.com/room/adventofcyber3" target="_blank">Advent of Cyber 3</a> : TryHackMe <br><br>
           <a href="https://medium.com/@jawadmahdi/how-i-found-blind-sql-injection-just-by-browsing-and-getting-a-unique-url-ed87fa1f35ed" target="_blank">How I found Blind SQL Injection just by browsing and getting a unique URL</a> : Jawad Mahdi <br><br>
           <a href="https://medium.com/@yoshimlutfi/account-take-over-with-http-pollution-attack-at-reset-password-functionality-9f683bc0bdd" target="_blank">Account Take Over with HTTP Pollution Attack at Reset Password Functionality</a> : yoshi m lutfi <br><br>
-          
         </p>
+        <br><br>
+        <h3>Day 61: Dec 8 2021</h3><br>
+        <p>
+          <a href="https://tryhackme.com/room/adventofcyber3" target="_blank">Advent of Cyber 3</a> : TryHackMe <br><br>
+          <a href="https://medium.com/@abdallah_0x0a/csrf-in-channge-password-lead-to-account-takeover-ff076db4b462" target="_blank">CSRF in channge password Lead to account takeover</a> : abdallah <br><br>
+          <a href="https://amit-lt.medium.com/a-story-of-idor-which-leads-to-privacy-violation-78c1b4c710fb" target="_blank">A Story of IDOR which leads to privacy violation…$$$</a> : Amit Kumar <br><br>
+          <a href="https://saadahmedx.medium.com/exploiting-auto-save-functionality-to-steal-login-credentials-bf4c7e1594da" target="_blank">Exploiting Auto-save Functionality To Steal Login Credentials</a> : Saad Ahmed <br><br>
+          <a href="https://popalltheshells.medium.com/p2-sensitive-information-disclosure-via-transaction-confirmation-page-b70dbe941108" target="_blank">P2 — Sensitive information disclosure via transaction confirmation page</a> : Ignatius Michael <br><br>
+          <a href="https://popalltheshells.medium.com/e-mail-template-html-code-injection-b79c78f1c5cf" target="_blank">E-mail Template — HTML Code Injection</a> Ignatius Michael <br><br>
+          <a href="https://medium.com/@wiiz4rd/xss-vulnerabilities-search-in-alf-nu-3be918dc6c45" target="_blank">XSS vulnerabilities search in alf.nu</a> Wiiz4rd <br><br>
+        </p>
+        <br><br>
+        <h3>Day 62: Dec 9 2021</h3><br>
+        <p>Break Day</p>
+        <br><br>
+        <h3>Day 63: Dec 10 2021</h3><br>
+        <p>
+          <a href="https://tusharbhatia43.medium.com/csrf-to-account-takeover-the-conceptual-way-of-bug-chaining-599515571083" target="_blank">CSRF to Account Takeover, the conceptual way of bug chaining.</a> : Tushar Bhatia <br><br>
+          <a href="https://medium.com/@86karthikkarthik/email-verification-bypass-d07b2db8dc4" target="_blank">Email Verification Bypass</a> : Karthik <br><br>
+          <a href="https://shivxtar.medium.com/idor-which-lead-to-account-takeover-df6d7f7520e8" target="_blank">IDOR which lead to account takeover</a> : Shivansh Malik <br><br>
+          <a href="https://susanwagle.medium.com/blind-sql-injection-login-bypass-challenge-1bf7c270375a" target="_blank">(Blind)SQL injection Login Bypass Challenge</a> : susan wagle <br><br>
+          <a href="https://3bodymo.medium.com/idor-leads-to-leak-medical-insurance-documents-8779715074be" target="_blank">IDOR leads to leak medical insurance documents</a> : Abdullah Mohamed <br><br>
+          <a href="https://raghavendrap120.medium.com/clickjacking-9d06c1b60f08" target="_blank">Clickjacking</a> : Raghav <br><br>
+          <a href="https://aravind07.medium.com/bypassing-login-page-in-2-mins-5b773d46f4d" target="_blank">Bypassing Login Page in 2 Mins</a> : Gnana Aravind <br><br>
+          <a href="https://subhdhungana.medium.com/getting-started-with-bug-bounty-hunting-shubham-1953f8086377" target="_blank">Getting Started With Bug Bounty Hunting | Shubham</a> : Subh Dhungana <br><br>
+          <a href="https://subhdhungana.medium.com/bug-bounty-and-penetration-testing-guide-if-you-are-starting-today-91a588424657" target="_blank">Bug Bounty And Penetration Testing Guide If You Are Starting Today</a> : Subh Dhungana <br><br>
+          <a href="https://tryhackme.com/room/adventofcyber3" target="_blank">Advent of Cyber 3</a> : TryHackMe <br><br>
+        </p>
+        <br><br>
+        <br><br>
         <p>Copyright © 2021 Aditya Dindi</p>
       </div> 
     </div>
