--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -662,6 +662,24 @@
           <a href="https://tryhackme.com/room/adventofcyber3" target="_blank">Advent of Cyber 3</a> : TryHackMe <br><br>
         </p>
         <br><br>
+        <h3>Day 64: Dec 11 2021</h3>
+        <p>
+          <a href="https://med-mahmoudi26.medium.com/from-staging-to-0-click-account-takeover-528a5ecaa3eb" target="_blank">From staging to 0 click account takeover</a> : mohamad mahmoudi <br><br>
+          <a href="https://medium.com/@yoshimlutfi/bypassing-otp-verification-for-changing-pin-in-registered-mobile-banking-account-ed92dbcaa5c7" target="_blank">Bypassing OTP Verification for Changing PIN in Registered Mobile Banking Account.</a> : yoshi m lutfi <br><br>
+          <a href="https://medium.com/@cybersrikanth/password-reset-functionality-for-devsec-e19fc84c35ae" target="_blank">Password reset functionality (for DevSec)</a> : CyberSrikant <br><br>
+          <a href="https://mrpentestguy.medium.com/blind-sql-injection-54bf0a6a9b48" target="_blank">Blind SQL Injection</a> : mrpentestguy <br><br>
+          <a href="https://medium.com/@janakkarki508/story-of-my-first-fb-valid-bug-7e713368312" target="_blank">STORY OF MY FIRST FB VALID BUG</a> : Janak Karki <br><br>
+          <a href="https://medium.com/pentesternepal/how-i-found-a-bug-in-apple-within-just-in-5min-d7357237d7a0" target="_blank">How I found a bug in Apple within just in 5min.</a> : Akash basnet <br><br>
+          <a href="https://rammk01.medium.com/broken-link-hijacking-3e190962644f" target="_blank">Broken Link Hijacking.</a> : Ramalingasamy <br><br>
+          <a href="https://medium.com/@nehpatel/story-of-unexpected-bugs-75734d51ac57" target="_blank">Story Of Unexpected Bugs</a> : Neh Patel <br><br>
+          <a href="https://shahjerry33.medium.com/pii-leakage-revealing-secrets-8b617071bd1c" target="_blank">PII Leakage - Revealing Secrets</a> : Jerry Shah (Jerry) <br><br>
+          <a href="https://basu-banakar.medium.com/an-unexpected-account-takeover-25ff436bb42d" target="_blank">An Unexpected Account Takeover</a> : Basavaraj Banakar <br><br>
+          <a href="https://bhichher.medium.com/open-redirect-vulnerability-some-common-payloads-fd1dcd73541c" target="_blank">Open Redirect Vulnerability & Some Common Payloads</a> Rahul Bhichher <br><br>
+          <a href="https://sapt.medium.com/sqli-on-a-bugcrowd-private-program-17858b57ec61" target="_blank">SQLI on a Bugcrowd Private Program</a> : Prajit Sindhkar <br><br>
+          <a href="https://tryhackme.com/room/adventofcyber3" target="_blank">Advent of Cyber 3</a> : TryHackMe <br><br>
+          <a href="https://www.udemy.com/course/computer-hacking-fundamentals/" target="_blank">Udemy: Fundamentals of Computer Hacking</a> : infySEC Global <br><br>
+          <a href="https://app.hackthebox.com/login" target="_blank">HackTheBox: Starting Point</a> <br><br>
+        </p>
         <br><br>
         <p>Copyright © 2021 Aditya Dindi</p>
       </div> 
