--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -681,6 +681,24 @@
           <a href="https://app.hackthebox.com/login" target="_blank">HackTheBox: Starting Point</a> <br><br>
         </p>
         <br><br>
+        <h3>Day 65: Dec 12 2021</h3>
+        <p>
+          <a href="https://ahmed8magdy.medium.com/file-upload-to-rce-538bb4128062" target="_blank">File Upload to RCE</a> : Ahmed Magdy <br><br>
+          <a href="https://haox-hapot.medium.com/how-to-know-the-secrets-of-a-website-server-4ade32184747" target="_blank">How to know the secrets of a website server?</a> : Haox <br><br>
+          <a href="https://haox-hapot.medium.com/the-ways-of-finding-subdomains-in-minutes-haox-4be5e20d902b" target="_blank">The ways of finding subdomains in minutes</a> : Haox <br><br>
+          <a href="https://haox-hapot.medium.com/the-surprising-powerful-world-of-linux-62d6b0b736c1" target="_blank">The surprising powerful world of Linux</a> : Haox <br><br>
+          <a href="https://haox-hapot.medium.com/5-sources-of-information-gathering-about-people-fe3fa508d22" target="_blank">5 sources of information gathering about people</a> : Haox <br><br>
+          <a href="https://medium.com/@tushar.tilak.sharma/how-i-turned-a-self-xss-into-one-click-account-takeover-through-bad-business-logic-ff003c30e96" target="_blank">How I turned a Self-XSS into one-click Account Takeover through Bad Business Logic</a> : Tushar Sharma <br><br>
+          <a href="https://0xgodson.medium.com/account-takeover-in-million-company-report-rejected-whats-wrong-60041f1815fb" target="_blank">Account Takeover in $Million Company?</a> : 0xGodson <br><br>
+          <a href="https://yasshk.medium.com/blind-ssrf-in-url-validator-93cbe7521c68" target="_blank">Blind SSRF in URL Validator</a> : Yash Kandekar <br><br>
+          <a href="https://medium.com/@kubotortech/pentesting-exploiting-ftp-cba8ec81968e" target="_blank">Pentesting | Exploiting FTP</a> : Kubotor <br><br>
+          <a href="https://medium.com/@mohamedajimi59/csrf-in-instagram-461cbba286a" target="_blank">CSRF in Instagram</a> : Mohamed Laajimi <br><br>
+          <a href="https://www.youtube.com/watch?v=Fmw8ia0sMEc&ab_channel=Tib3rius" target="_blank">TryHackMe - Advent of Cyber 3 - Day 7 Walkthrough</a> : Tib3rius <br><br>
+          <a href="https://tryhackme.com/room/adventofcyber3" target="_blank">Advent of Cyber 3</a> : TryHackMe <br><br>
+          <a href="https://app.hackthebox.com/login" target="_blank">HackTheBox: Starting Point</a> <br><br>
+          <a href="https://tryhackme.com/room/ide" target="_blank">IDE</a> : TryHackMe <br><br>
+        </p>
+        <br><br>
         <p>Copyright © 2021 Aditya Dindi</p>
       </div> 
     </div>
