--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -699,6 +699,21 @@
           <a href="https://tryhackme.com/room/ide" target="_blank">IDE</a> : TryHackMe <br><br>
         </p>
         <br><br>
+        <h3>Day 66: Dec 13 2021</h3>
+        <p>
+          <a href="https://infosecwriteups.com/otp-bypass-and-account-takeover-using-response-manipulation-685ad4e1ea76" target="_blank">OTP bypass and Account takeover using response manipulation</a> : Krishnadev P Melevila <br><br>
+          <a href="https://medium.com/@7azimo/hacking-into-admin-panel-of-u-s-federal-government-system-c-a-r-s-without-credentials-9117b865ba58" target="_blank">Hacking into Admin Panel of U.S Federal government system C.A.R.S — without credentials.</a> : Hazem Brini <br><br>
+          <a href="https://www.youtube.com/watch?v=TX18KQq67Tg&ab_channel=LiveOverflow" target="_blank">Best Operating Systems for Hacking?!</a> : LiveOverflow <br><br>
+          <a href="https://medium.com/@vishnu0002/how-i-managed-to-hack-into-a-billion-dollar-sport-platform-7cc667081229" target="_blank">How I managed to hack User accounts of a billion-dollar sport platform</a> : vishnuraj <br><br>
+          <a href="https://medium.com/@rishuss1212/my-experience-with-bug-hunting-5709247abe0c" target="_blank">My Experience with bug hunting</a> : Rishu Yadav <br><br>
+          <a href="https://medium.com/@thedarkwayg/how-i-found-my-first-xss-bug-96fb8e85a24c" target="_blank">How I Found My First XSS Bug</a> : Thedarkwayg <br><br>
+          <a href="https://prajwalkewat.medium.com/1-my-bug-bounty-journey-frist-bounty-with-100-825e7be86ada" target="_blank">#1 My Bug Bounty Journey (First)</a> : Prajwal <br><br>
+          <a href="https://medium.com/@xcfour/password-requirement-bypass-on-adding-phone-number-cf2c24bcd315" target="_blank">Password requirement Bypass on adding Phone Number</a> : Abhinav Gaur <br><br>
+          <a href="https://medium.com/techiepedia/how-i-made-united-nations-hall-of-fame-in-3-minutes-b5c87a42c0ee" target="_blank">How I made the United Nations Hall of Fame in 3 minutes</a> : Renganathan <br><br>
+          <a href="https://app.hackthebox.com/login" target="_blank">HackTheBox: Starting Point</a> <br><br>
+          <a href="https://tryhackme.com/room/jason" target="_blank">Jason</a> : TryHackMe <br><br>
+          <a href="https://www.udemy.com/course/computer-hacking-fundamentals/" target="_blank">Udemy: Fundamentals of Computer Hacking</a> : infySEC Global <br><br>
+        </p>
         <p>Copyright © 2021 Aditya Dindi</p>
       </div> 
     </div>
